--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "html-loader": "^5.1.0",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-cli": "^5.1.4"
   }
 }
