--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server/server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -21,19 +21,26 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.19.2",
     "filestack-react": "^5.0.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
-    "next": "14.1.4",
+    "multer": "^1.4.5-lts.1",
+    "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "path": "^0.12.7",
     "prisma": "^5.18.0",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
@@ -49,6 +56,7 @@
     "eslint-config-next": "14.1.4",
     "html-loader": "^5.1.0",
     "ignore-loader": "^0.1.2",
+    "nodemon": "^3.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
