--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "filestack-react": "^5.0.0",
@@ -36,6 +38,7 @@
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "node-cron": "^3.0.3",
     "path": "^0.12.7",
     "prisma": "^5.18.0",
     "querystring": "^0.2.1",
