--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "filestack-react": "^5.0.0",
